Fixed the gap between listings

--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,7 @@ body {
 }
 
 .profile-card-container{
+    margin: 0 15%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -103,9 +104,8 @@ body {
    transition: var(--transition);
    width: 100%;
    position: relative;
-   min-height: fit-content;
+   height: 100%;
    cursor: pointer;
-
 }
 
 .card:hover {
@@ -114,24 +114,24 @@ body {
 
 .card img {
     width: 100%;
-    max-height: 300px;
+    max-height: 70%;
     object-fit: cover;
     display: block;
     transition: var(--transition);
 }
 
 .card-content {
-   padding: 15px;
+   padding: 10px;
 }
 
 .card h2 {
-   font-size: 1.3em;
+   font-size: 1.1em;
    margin: 0 0 10px;
    color: #333;
 }
 
 .card p {
-   font-size: 1em;
+   font-size: 0.9em;
    margin: 5px 0;
    color: #555;
 }
